# audio-test

./: CMakeLists.txt  Makefile  README.md
src/: audio_pthread.c  audio_pthread.h  defines.h  main.c
